--- a/kimai-helmchart-source/Chart.yaml
+++ b/kimai-helmchart-source/Chart.yaml
@@ -1,13 +1,13 @@
 apiVersion: v2
+name: kimai-helmchart
 description: A Kimai2 Helm chart for Kubernetes
 type: application
-version: "0.1.0"
-appVersion: "0.1.0"
-home: https://github.com/kevinpapst/kimai2
-icon: https://raw.githubusercontent.com/kimai/images/master/repository-header.png
-maintainers:
-- email: gresci@tiscali.it
-  name: Giorgio Resci
-name: kimai-helmchart
-sources:
-- https://github.com/gresci/kimai2-helmchart/tree/gh-pages
+version: 0.1.0
+appVersion: "1.16.0"
+#home: https://github.com/kevinpapst/kimai2
+#icon: https://raw.githubusercontent.com/kimai/images/master/repository-header.png
+#maintainers:
+#- email: gresci@tiscali.it
+#  name: Giorgio Resci
+#sources:
+#- https://github.com/gresci/kimai2-helmchart/tree/gh-pages
